--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -13,7 +13,8 @@
       "@domain/*": ["domain/*"],
       "@application/*": ["application/*"],
       "@infrastructure/*": ["infrastructure/*"],
-      "@shared/*": ["shared/*"]
+      "@shared/*": ["shared/*"],
+      "@services/*": ["services/*"]
     }
   },
   "include": ["src/**/*"],
